# autochess

./: CMakeLists.txt  build.sh  ssh  sshpass
gpio/: CMakeLists.txt  build.sh
gpio/src/: gpio.c  gpio.h  test.c
motor/: drv8825.cpp
src/board/: CMakeLists.txt
src/gpio/: CMakeLists.txt
src/gpio/src/: gpio.c
src/motor/: CMakeLists.txt
src/motor/src/: drv8825.h
